# hmp-server

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  Dockerfile  LICENSE  README.md  docker-compose.yaml  mypy.ini  pyproject.toml
.github/workflows/: cd.yml  ci.yml
app/: main.py
app/admin/: dto.py  router.py  service.py
app/audit/: decorators.py  dto.py  models.py  repository.py  router.py  service.py
app/auth/: decorators.py  dependencies.py  dto.py  enums.py  models.py  repository.py  router.py  service.py  utils.py
app/credentials/: dto.py  repository.py  router.py  service.py
app/pdf_to_audio/: dto.py  router.py  service.py
app/project/: dto.py  models.py  repository.py  router.py  service.py
app/shared/: exceptions.py  models.py
app/submission/: dto.py  models.py  repository.py  router.py  service.py
app/submissions/: dto.py  models.py  repository.py  router.py  service.py
app/user/: dto.py  models.py  repository.py  router.py  service.py
db/migrations/: 20250926213419_create_users_table.sql  20250926222543_add_user_public_key.sql  20250928113345_from_categories_to_access_rules.sql  20250929133639_update_user_security_model.sql  20250929144921_create_projects_tables.sql  20250930085158_update_user_model_for_admin.sql  20251012120755_create_action_logs_table.sql  20251013084319_add_user_id_to_action_logs.sql  20251020174857_create_submissions_table.sql  20251021223833_add_content_hash_to_submissions.sql  (+8 more)
docs/: CI-CD.md
nginx/: hearmypaper.edu.crt  nginx.conf
scripts/: README.md  create_admin_user.py  generate_server_keypair.py
(+6 files in other folders)
